@@ -2,9 +2,14 @@ package net.hexagreen.wynntrans.text.chat.types;
 
 import net.hexagreen.wynntrans.text.ISpaceProvider;
 import net.hexagreen.wynntrans.text.chat.WynnChatText;
+import net.hexagreen.wynntrans.text.tooltip.types.Ingredient;
+import net.hexagreen.wynntrans.text.tooltip.types.ItemName;
+import net.hexagreen.wynntrans.text.tooltip.types.NormalEquipment;
+import net.hexagreen.wynntrans.text.tooltip.types.UnidentifiedEquipment;
 import net.minecraft.text.MutableText;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
+import net.minecraft.text.TranslatableTextContent;
 import net.minecraft.util.Formatting;
 import org.apache.commons.codec.digest.DigestUtils;
 
@@ -61,10 +66,50 @@ public class CaveCompleted extends WynnChatText implements ISpaceProvider {
                 continue;
             }
             String valExclusiveReward = getSibling(i).getString();
+            String num;
+            if(valExclusiveReward.matches("^\\+\\d+ .+")) {
+                String[] split = valExclusiveReward.split(" ", 2);
+                num = split[0] + " ";
+                valExclusiveReward = split[1];
+            }
+            else {
+                num = "+";
+                valExclusiveReward = valExclusiveReward.replaceFirst("^\\+", "");
+            }
+            Text _val = Text.literal(valExclusiveReward).setStyle(GRAY);
+            Text normalEquip = NormalEquipment.getTranslatedItemName(_val);
+            if(normalEquip != null) {
+                resultText.append(getSibling(i).getSiblings().getFirst());
+                resultText.append(Text.literal(num).setStyle(GRAY));
+                resultText.append(normalEquip).append("\n");
+                continue;
+            }
+            Text unidentifiedEquip = UnidentifiedEquipment.getTranslatedItemName(_val);
+            if(unidentifiedEquip != null) {
+                resultText.append(getSibling(i).getSiblings().getFirst());
+                resultText.append(Text.literal(num).setStyle(GRAY));
+                resultText.append(unidentifiedEquip).append("\n");
+                continue;
+            }
+            Text ingredient = Ingredient.getTranslatedItemName(_val);
+            if(ingredient != null) {
+                resultText.append(getSibling(i).getSiblings().getFirst());
+                resultText.append(Text.literal(num).setStyle(GRAY));
+                resultText.append(ingredient).append("\n");
+                continue;
+            }
+            Text itemName = new ItemName(_val).setNoTranslationAddiction().textAsMutable();
+            if(itemName.getSiblings().getFirst().getContent() instanceof TranslatableTextContent) {
+                resultText.append(getSibling(i).getSiblings().getFirst());
+                resultText.append(Text.literal(num).setStyle(GRAY));
+                resultText.append(itemName).append("\n");
+                continue;
+            }
+
             String hash = DigestUtils.sha1Hex(valExclusiveReward).substring(0, 4);
             String keyExclusiveReward = keyCaveName + ".reward." + hash;
             if(WTS.checkTranslationExist(keyExclusiveReward, valExclusiveReward)) {
-                resultText.append(getSibling(i).getSiblings().get(0));
+                resultText.append(getSibling(i).getSiblings().getFirst());
                 resultText.append(Text.translatable(keyExclusiveReward).setStyle(getSibling(i).getSiblings().get(1).getStyle()));
             }
             else {
